<resources>
    <string name="app_name">TugasAkhirAjeng</string>
    <string name="tab_home">Home</string>
    <string name="tab_course">Course</string>
    <string name="tab_user">Profile</string>
    <string name="image_description">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_register">Create Account</string>
    <string name="welcomeDesc_register">Sign up and start explore</string>
    <string name="welcomeDesc">Login your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="exampleUsername">example@gmail.com</string>
    <string name="exampleName">Ajeng Febriani</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="examplePassword">**********</string>
    <string name="examplePhone">85690******</string>
    <string name="examplePhoneInit">+62</string>
    <string name="login">LOGIN</string>
    <string name="updateProfile">Update Profile</string>
    <string name="register">REGISTER</string>
    <string name="loginDesc">Don\'t have an account?</string>
    <string name="registerDesc">Already have an account?</string>
    <string name="loginDescRegister">REGISTER</string>
    <string name="RegisterDescLogin">Login</string>
    <string name="todo">TODO</string>
    <string name="videoUrl">S7bJQGCuwTU</string>
    <string name="videoUrl2">hFVyd63KMoA</string>
    <string name="videoUrl3">51DyjWX2s4E</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabiturerat</string>
</resources>
